# Life_After_School

./: CMakeLists.txt  README.md
controller/: Controller.cpp  Controller.h  Operation.cpp  Operation.h
domain/: Event.cpp  Event.h
gui/: AdminGUI.cpp  AdminGUI.h  DialogShowAllEvents.cpp  DialogShowAllEvents.h  SingleEventGUI.cpp  SingleEventGUI.h  StartGUI.cpp  StartGUI.h  UserGUI.cpp  UserGUI.h  main.cpp
gui/user events/: ManageUserEventsGUI.cpp  ManageUserEventsGUI.h  UserEventsTableModel.cpp  UserEventsTableModel.h
repository/: CSVEventRepository.cpp  CSVEventRepository.h  EventRepository.cpp  EventRepository.h  HTMLEventRepository.cpp  HTMLEventRepository.h
ui/: UI.cpp  UI.h  main.cpp
